--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,18 @@
-p	{
-	color: red;
+.NavBar {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #1A3855;
+}
+li {
+	float: left;
+	display: block;
+	color:white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+li:hover {
+	background-color: #111;
 }
